--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -391,6 +391,11 @@ body {
 }
 
 .orders-show-page {
+  .payment-buttons {
+    margin-top: 10px;
+    padding-right: 10px;
+  }
+
   font-size: 12px;
 
   .vertical-middle {
@@ -474,3 +479,4 @@ body {
     }
   }
 }
+
