用户界面-申请退款

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14917,7 +14917,7 @@ body {
 .orders-show-page {
   font-size: 12px;
 }
-.orders-show-page .payment-buttons, .orders-show-page .receive-button {
+.orders-show-page .payment-buttons, .orders-show-page .receive-button, .orders-show-page .refund-button {
   margin-top: 10px;
   padding-right: 10px;
 }
