--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -65,6 +65,24 @@ body {
   }
 
   .search-form {
+    .filter {
+      border: 1px red solid;
+      font-size: 12px;
+      padding: 2px 0 2px 2px;
+
+      .filter-value {
+        color: red;
+      }
+
+      .remove-filter {
+        text-decoration: none;
+        color: white;
+        font-weight: bold;
+        background: red;
+        padding: 2px;
+      }
+    }
+
     padding: 0 5px 10px;
 
     .category-breadcrumb {
