--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14658,6 +14658,63 @@ body {
 .products-index-page .pagination, .products-favorites-page .pagination {
   margin-right: 5px;
 }
+.products-index-page .products-list, .products-favorites-page .products-list {
+  padding: 0 15px;
+}
+.products-index-page .products-list .product-item, .products-favorites-page .products-list .product-item {
+  padding: 0 5px;
+  margin-bottom: 10px;
+}
+.products-index-page .products-list .product-item .product-content, .products-favorites-page .products-list .product-item .product-content {
+  border: 1px solid #eee;
+}
+.products-index-page .products-list .product-item .product-content .top, .products-favorites-page .products-list .product-item .product-content .top {
+  padding: 5px;
+}
+.products-index-page .products-list .product-item .product-content .top img, .products-favorites-page .products-list .product-item .product-content .top img {
+  width: 100%;
+}
+.products-index-page .products-list .product-item .product-content .top .price, .products-favorites-page .products-list .product-item .product-content .top .price {
+  margin-top: 5px;
+  font-size: 20px;
+  color: #ff0036;
+}
+.products-index-page .products-list .product-item .product-content .top .price b, .products-favorites-page .products-list .product-item .product-content .top .price b {
+  font-size: 14px;
+}
+.products-index-page .products-list .product-item .product-content .top .title, .products-favorites-page .products-list .product-item .product-content .top .title {
+  margin-top: 10px;
+  height: 32px;
+  line-height: 12px;
+  max-height: 32px;
+}
+.products-index-page .products-list .product-item .product-content .top .title a, .products-favorites-page .products-list .product-item .product-content .top .title a {
+  font-size: 12px;
+  line-height: 14px;
+  color: #333;
+  text-decoration: none;
+}
+.products-index-page .products-list .product-item .product-content .bottom, .products-favorites-page .products-list .product-item .product-content .bottom {
+  font-size: 12px;
+  display: flex;
+}
+.products-index-page .products-list .product-item .product-content .bottom .sold_count span, .products-favorites-page .products-list .product-item .product-content .bottom .sold_count span {
+  color: #b57c5b;
+  font-weight: bold;
+}
+.products-index-page .products-list .product-item .product-content .bottom .review_count span, .products-favorites-page .products-list .product-item .product-content .bottom .review_count span {
+  color: #38b;
+  font-weight: bold;
+}
+.products-index-page .products-list .product-item .product-content .bottom > div, .products-favorites-page .products-list .product-item .product-content .bottom > div {
+  padding: 10px 5px;
+  line-height: 12px;
+  flex-grow: 1;
+  border-top: 1px solid #eee;
+}
+.products-index-page .products-list .product-item .product-content .bottom > div:first-child, .products-favorites-page .products-list .product-item .product-content .bottom > div:first-child {
+  border-right: 1px solid #eee;
+}
 .products-index-page .search-form, .products-favorites-page .search-form {
   padding: 0 5px 10px;
 }
@@ -14719,63 +14776,6 @@ body {
   margin-right: 50px;
   color: #666;
   text-decoration: none;
-}
-.products-index-page .products-list, .products-favorites-page .products-list {
-  padding: 0 15px;
-}
-.products-index-page .products-list .product-item, .products-favorites-page .products-list .product-item {
-  padding: 0 5px;
-  margin-bottom: 10px;
-}
-.products-index-page .products-list .product-item .product-content, .products-favorites-page .products-list .product-item .product-content {
-  border: 1px solid #eee;
-}
-.products-index-page .products-list .product-item .product-content .top, .products-favorites-page .products-list .product-item .product-content .top {
-  padding: 5px;
-}
-.products-index-page .products-list .product-item .product-content .top img, .products-favorites-page .products-list .product-item .product-content .top img {
-  width: 100%;
-}
-.products-index-page .products-list .product-item .product-content .top .price, .products-favorites-page .products-list .product-item .product-content .top .price {
-  margin-top: 5px;
-  font-size: 20px;
-  color: #ff0036;
-}
-.products-index-page .products-list .product-item .product-content .top .price b, .products-favorites-page .products-list .product-item .product-content .top .price b {
-  font-size: 14px;
-}
-.products-index-page .products-list .product-item .product-content .top .title, .products-favorites-page .products-list .product-item .product-content .top .title {
-  margin-top: 10px;
-  height: 32px;
-  line-height: 12px;
-  max-height: 32px;
-}
-.products-index-page .products-list .product-item .product-content .top .title a, .products-favorites-page .products-list .product-item .product-content .top .title a {
-  font-size: 12px;
-  line-height: 14px;
-  color: #333;
-  text-decoration: none;
-}
-.products-index-page .products-list .product-item .product-content .bottom, .products-favorites-page .products-list .product-item .product-content .bottom {
-  font-size: 12px;
-  display: flex;
-}
-.products-index-page .products-list .product-item .product-content .bottom .sold_count span, .products-favorites-page .products-list .product-item .product-content .bottom .sold_count span {
-  color: #b57c5b;
-  font-weight: bold;
-}
-.products-index-page .products-list .product-item .product-content .bottom .review_count span, .products-favorites-page .products-list .product-item .product-content .bottom .review_count span {
-  color: #38b;
-  font-weight: bold;
-}
-.products-index-page .products-list .product-item .product-content .bottom > div, .products-favorites-page .products-list .product-item .product-content .bottom > div {
-  padding: 10px 5px;
-  line-height: 12px;
-  flex-grow: 1;
-  border-top: 1px solid #eee;
-}
-.products-index-page .products-list .product-item .product-content .bottom > div:first-child, .products-favorites-page .products-list .product-item .product-content .bottom > div:first-child {
-  border-right: 1px solid #eee;
 }
 
 .products-show-page .properties-list {
@@ -14941,6 +14941,69 @@ body {
 .products-show-page .product-detail .tab-content {
   border: 1px solid #eee;
   padding: 20px;
+}
+.products-show-page .similar-products .products-list {
+  padding: 0 15px;
+}
+.products-show-page .similar-products .products-list .product-item {
+  padding: 0 5px;
+  margin-bottom: 10px;
+}
+.products-show-page .similar-products .products-list .product-item .product-content {
+  border: 1px solid #eee;
+}
+.products-show-page .similar-products .products-list .product-item .product-content .top {
+  padding: 5px;
+}
+.products-show-page .similar-products .products-list .product-item .product-content .top img {
+  width: 100%;
+}
+.products-show-page .similar-products .products-list .product-item .product-content .top .price {
+  margin-top: 5px;
+  font-size: 20px;
+  color: #ff0036;
+}
+.products-show-page .similar-products .products-list .product-item .product-content .top .price b {
+  font-size: 14px;
+}
+.products-show-page .similar-products .products-list .product-item .product-content .top .title {
+  margin-top: 10px;
+  height: 32px;
+  line-height: 12px;
+  max-height: 32px;
+}
+.products-show-page .similar-products .products-list .product-item .product-content .top .title a {
+  font-size: 12px;
+  line-height: 14px;
+  color: #333;
+  text-decoration: none;
+}
+.products-show-page .similar-products .products-list .product-item .product-content .bottom {
+  font-size: 12px;
+  display: flex;
+}
+.products-show-page .similar-products .products-list .product-item .product-content .bottom .sold_count span {
+  color: #b57c5b;
+  font-weight: bold;
+}
+.products-show-page .similar-products .products-list .product-item .product-content .bottom .review_count span {
+  color: #38b;
+  font-weight: bold;
+}
+.products-show-page .similar-products .products-list .product-item .product-content .bottom > div {
+  padding: 10px 5px;
+  line-height: 12px;
+  flex-grow: 1;
+  border-top: 1px solid #eee;
+}
+.products-show-page .similar-products .products-list .product-item .product-content .bottom > div:first-child {
+  border-right: 1px solid #eee;
+}
+.products-show-page .similar-products .title {
+  font-weight: normal;
+}
+.products-show-page .similar-products .price {
+  background-color: unset;
 }
 
 .cart-index-page .product_list .preview {
