--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -59,10 +59,85 @@ body {
   }
 }
 
+@mixin product-list {
+  .products-list {
+    padding: 0 15px;
+
+    .product-item {
+      padding: 0 5px;
+      margin-bottom: 10px;
+
+      .product-content {
+        border: 1px solid #eee;
+
+        .top {
+          padding: 5px;
+
+          img {
+            width: 100%;
+          }
+
+          .price {
+            margin-top: 5px;
+            font-size: 20px;
+            color: #ff0036;
+
+            b {
+              font-size: 14px;
+            }
+          }
+
+          .title {
+            margin-top: 10px;
+            height: 32px;
+            line-height: 12px;
+            max-height: 32px;
+
+            a {
+              font-size: 12px;
+              line-height: 14px;
+              color: #333;
+              text-decoration: none;
+            }
+          }
+        }
+
+        .bottom {
+          font-size: 12px;
+          display: flex;
+
+          .sold_count span {
+            color: #b57c5b;
+            font-weight: bold;
+          }
+
+          .review_count span {
+            color: #38b;
+            font-weight: bold;
+          }
+
+          & > div {
+            &:first-child {
+              border-right: 1px solid #eee;
+            }
+
+            padding: 10px 5px;
+            line-height: 12px;
+            flex-grow: 1;
+            border-top: 1px solid #eee;
+          }
+        }
+      }
+    }
+  }
+}
+
 .products-index-page, .products-favorites-page {
   .pagination {
     margin-right: 5px;
   }
+
+  @include product-list;
 
   .search-form {
     .filter {
@@ -134,77 +209,6 @@ body {
           margin-right: 50px;
           color: #666;
           text-decoration: none;
-        }
-      }
-    }
-  }
-
-  .products-list {
-    padding: 0 15px;
-
-    .product-item {
-      padding: 0 5px;
-      margin-bottom: 10px;
-
-      .product-content {
-        border: 1px solid #eee;
-
-        .top {
-          padding: 5px;
-
-          img {
-            width: 100%;
-          }
-
-          .price {
-            margin-top: 5px;
-            font-size: 20px;
-            color: #ff0036;
-
-            b {
-              font-size: 14px;
-            }
-          }
-
-          .title {
-            margin-top: 10px;
-            height: 32px;
-            line-height: 12px;
-            max-height: 32px;
-
-            a {
-              font-size: 12px;
-              line-height: 14px;
-              color: #333;
-              text-decoration: none;
-            }
-          }
-        }
-
-        .bottom {
-          font-size: 12px;
-          display: flex;
-
-          .sold_count span {
-            color: #b57c5b;
-            font-weight: bold;
-          }
-
-          .review_count span {
-            color: #38b;
-            font-weight: bold;
-          }
-
-          & > div {
-            &:first-child {
-              border-right: 1px solid #eee;
-            }
-
-            padding: 10px 5px;
-            line-height: 12px;
-            flex-grow: 1;
-            border-top: 1px solid #eee;
-          }
         }
       }
     }
@@ -412,6 +416,18 @@ body {
     .tab-content {
       border: 1px solid #eee;
       padding: 20px;
+    }
+  }
+
+  .similar-products {
+    @include product-list;
+
+    .title {
+      font-weight: normal;
+    }
+
+    .price {
+      background-color: unset;
     }
   }
 }
@@ -808,6 +824,8 @@ body {
     padding-right: 10px;
   }
 }
+
+
 
 
 
